--- a/charts/backend/templates/backend-deployment.yaml
+++ b/charts/backend/templates/backend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: backend
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: backend
@@ -14,7 +14,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: <your_ecr_backend_image>
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 3000
-
