--- a/charts/backend/templates/backend-service.yaml
+++ b/charts/backend/templates/backend-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: backend
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   selector:
     app: backend
   ports:
-    - port: 3000
+    - protocol: TCP
+      port: {{ .Values.service.port }}
       targetPort: 3000
+
 
