--- a/charts/frontend/templates/frontend-deployment.yaml
+++ b/charts/frontend/templates/frontend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: frontend
@@ -14,7 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: <your_ecr_frontend_image>
+          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           ports:
-            - containerPort: 80
-
+            - containerPort: 3000
