--- a/charts/frontend/templates/frontend-service.yaml
+++ b/charts/frontend/templates/frontend-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type }}
   selector:
     app: frontend
   ports:
-    - port: 80
-      targetPort: 80
-
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: 3000
