--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -6,13 +6,15 @@ on:
   pull_request:
 
 jobs:
-  backend-tests:
-    name: Backend Unit Tests
+  unit-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app: [backend, frontend]
 
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./${{ matrix.app }}
 
     steps:
       - name: Checkout Code
@@ -26,28 +28,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Backend Tests
-        run: npm test
-
-  frontend-tests:
-    name: Frontend Unit Tests
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./frontend
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run Frontend Tests
+      - name: Run Unit Tests
         run: npm test
