--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.1"
   },
@@ -15,4 +16,3 @@
     "supertest": "^6.3.3"
   }
 }
-
