--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,15 @@
-FROM node:18-alpine
+# Stage 1: Build React app
+FROM node:18-alpine AS build
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-
 RUN npm run build
-EXPOSE 80
-CMD ["npx", "serve", "-s", "build", "-l", "80"]
 
+# Stage 2: Serve app with nginx
+FROM nginx:alpine
+
+COPY --from=build /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
