--- a/.github/workflows/checkov.yaml
+++ b/.github/workflows/checkov.yaml
@@ -15,5 +15,5 @@ jobs:
         run: pip install checkov
 
       - name: Run Checkov
-        run: checkov -d .
+        run: checkov -d . --soft-fail
 
