--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.1",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^8.2.1",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
