--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "test": "react-scripts test --watchAll=false"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
