Complete enterprise implementation with DevOps, testing, CI/CD and Docker setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "dev": "nodemon index.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/services",
+    "test:integration": "jest tests/*.test.js",
+    "test:ci": "jest --ci --coverage --maxWorkers=2"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
