--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,9 @@
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
