updated to latest

--- a/charts/frontend/templates/frontend-ingress.yaml
+++ b/charts/frontend/templates/frontend-ingress.yaml
@@ -13,6 +13,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: frontend-service
+                # Service name must match the Service metadata.name (frontend)
+                name: frontend
                 port:
                   number: 80
