--- a/charts/frontend/Chart.yaml
+++ b/charts/frontend/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v2
-name: backend
+name: frontend
 version: 0.1.0
-description: A Helm chart for the backend application
+description: A Helm chart for the frontend application
