--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,3 +64,33 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker push securepetstore-backend
           docker push securepetstore-frontend
+
+  terraform:
+    name: Terraform
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Configure AWS credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+          echo "AWS credentials configured"
+
+      - name: Terraform Init & Plan
+        working-directory: ./infra/terraform
+        env:
+          TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+          TF_VAR_backend_image: ${{ secrets.BACKEND_IMAGE }}
+          TF_VAR_frontend_image: ${{ secrets.FRONTEND_IMAGE }}
+        run: |
+          terraform init
+          terraform validate
+          terraform plan -input=false -var="db_password=${{ secrets.DB_PASSWORD }}"
